# torodial-attention

./: .gitignore  AGENTS.md  EVALUATION_GUIDE.md  EVALUATION_STATUS.md  FINAL_RESULTS_ANALYSIS.md  NEXT_STEPS.md  QUICKSTART.md  README.md  RESULTS.md  bench_cpu.json  bench_cpu_v2.json  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: experiments.yaml  training_config.yaml
examples/: orthogonal_pe_approaches.py  test_orthogonal_pe.py
results/: baseline_comparison.json  baseline_phi2.json  bench_cpu.json  bench_gpu.json
results/benchmarks/: ANALYSIS_INITIAL_RESULTS.md  (+1 more)
scripts/: __init__.py  benchmark_backends.py  benchmark_perplexity.py  compare_baseline.py  debug_20steps.py  debug_nan.py  eval_baseline_phi2.py  eval_longbench.py  eval_scrolls.py  evaluate.py  evaluate_comprehensive.py  finetune_modern.py  load_phi2.py  prepare_data.py  run_2layer_experiment.sh  run_4layer_experiment.sh  run_depth_sweep.sh  run_experiments.py  test_fp32_optimizer.py  train_toroidal.py  validate_gpu_training.py  validate_implementation.py  validate_implementation_enhanced.py
tests/: __init__.py  conftest.py  run_all_tests.py  test_advanced_features.py  test_core.py  test_distance.py  test_edge_cases.py  test_fusion.py  test_integration.py  test_latent.py  test_mathematical_correctness.py  test_parametrized.py  test_pe.py  test_performance.py  test_phi2_multilayer.py  test_ring_attention.py  test_toroidal_attention.py
toroidal_attention/: __init__.py  adaptive.py  backends.py  core.py  distance.py  fft.py  fusion.py  latent.py  positional_encoding.py  positional_encoding_orthogonal.py  ring.py  window.py
(+5 files in other folders)
